# proxy-tool

./: .gitignore  AGENTS.md  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  skills-lock.json
.github/workflows/: harness-cli-release.yml  post-merge-maintenance.yml
apps/easyproxy-ui/: app.vue  nuxt.config.ts  package.json  tsconfig.json
docs/decisions/: 0008-fastapi-backend.md  0009-system-proxy-routing.md
docs/product/: easyproxy-overview.md
docs/stories/: US-001-easyproxy-skeleton.md  US-002-backend-foundation.md  US-003-forward-proxy-core.md  US-025-post-merge-cli-release-and-changelog.md
easyproxy/: __main__.py  config.py  database.py  logging.py
easyproxy/api/: app.py  events.py  exceptions.py  middleware.py
easyproxy/cli/: client.py  logs.py  main.py  pool.py  proxy.py  rotate.py  status.py
easyproxy/migrations/: 001_initial.sql
easyproxy/pool/: health.py  importer.py  manager.py  models.py
easyproxy/proxy/: connect.py  errors.py  headers.py  (+4 more)
specs/: README.md  api-specs.md  architecture.md  data-model.md  feature-map.md  implementation.md  overview.md  proxy-engine.md  ui-specs.md
tasks/: 01-backend-infrastructure.md  02-proxy-core.md  03-proxy-pool-management.md  04-rotation-engine.md  05-residential-network.md  06-desktop-application.md  07-user-interface.md  08-cli-mode.md  09-notifications.md
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_health.py  test_pool_crud.py  test_proxy_connect.py  test_proxy_errors.py  test_proxy_http.py  test_proxy_server.py  test_rotation.py
(+21 files in other folders)
