[project]
name = "easyproxy"
version = "0.1.0"
description = "Proxy IP desktop app for rate limit bypass"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["easyproxy*"]
